--- a/src/views/index.html
+++ b/src/views/index.html
@@ -56,11 +56,11 @@
         <p class="icon-title">icon title</p>
       </div>
       <div class="icons">
-        <a href="icon">Icon</a>
+        <a href="">Icon</a>
         <p class="icon-title">icon title</p>
       </div>
       <div class="icons">
-        <a href="icon">Icon</a>
+        <a href="">Icon</a>
         <p class="icon-title">icon title</p>
       </div>
     </div>
