--- a/src/views/index.html
+++ b/src/views/index.html
@@ -52,15 +52,15 @@
     </div>
     <div id="icons-container">
       <div class="icons">
-        <a href="">Icon</a>
+        <a href="#">Icon</a>
         <p class="icon-title">icon title</p>
       </div>
       <div class="icons">
-        <a href="">Icon</a>
+        <a href="#">Icon</a>
         <p class="icon-title">icon title</p>
       </div>
       <div class="icons">
-        <a href="">Icon</a>
+        <a href="#">Icon</a>
         <p class="icon-title">icon title</p>
       </div>
     </div>
