--- a/src/views/index.html
+++ b/src/views/index.html
@@ -29,7 +29,7 @@
         </div>
         <div id="head-content">
           <div id="heading_img">
-            <img src="../images/model portfolio, egyéni/_DSC3559.JPG" alt="">
+            <img src="images/_DSC3514.JPG" alt="">
           </div>
           <div id="heading_description">
             <h1 id="authorName">Your name</h1>
@@ -66,7 +66,7 @@
     </div>
     <div id="about-me">
       <div id="about-me-img">
-        <img  src="../images/model portfolio, egyéni/_DSC3559.JPG" alt="">
+        <img  src="images/_DSC3514.JPG" alt="">
       </div>
       <div id="about-me-title">
         <h1>About me</h1>
