--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -3,6 +3,7 @@
           box-sizing: border-box;
   padding: 0;
   margin: 0;
+  border: 1px solid;
 }
 
 body {
@@ -11,6 +12,10 @@ body {
 
 body #container {
   min-width: 432px;
+}
+
+body #header {
+  display: none;
 }
 
 body #message-line {
@@ -78,6 +83,7 @@ body #message-line {
     border-bottom-left-radius: 35px;
     border-bottom-right-radius: 35px;
     padding-bottom: 8rem;
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
