--- a/src/public/css/style.scss
+++ b/src/public/css/style.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  border: 1px solid;
 }
 
 body {
@@ -9,6 +10,10 @@ body {
 
   #container {
     min-width: 432px;
+  }
+
+  #header {
+    display: none;
   }
 
   #message-line {
@@ -74,6 +79,7 @@ body {
       border-bottom-left-radius: 35px;
       border-bottom-right-radius: 35px;
       padding-bottom: 8rem;
+      width: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
