Headline and basic menu toggler is added

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,11 +16,12 @@
     <div id="header">
       <p class="logo">Logo</p>
       <nav id="nav">
-        <a href="" class="nav_link">About me</a>
+        <a href="#about-me" class="nav_link">About me</a>
         <a href="" class="nav_link">Portfolio</a>
         <a href="" class="nav_link">Reviews</a>
         <a href="" class="nav_link">Contact</a>
       </nav>
+      <div id="menu-toggler">menu</div>
     </div>
     <div id="headline">
       <div id="headline-inner-container">
