--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -7,15 +7,47 @@
 }
 
 body {
-  background: #F2F2F2;
+  background: whitesmoke;
 }
 
 body #container {
   min-width: 338px;
 }
 
-body #header {
-  display: none;
+body #container #header {
+  background: lightblue;
+  height: 30px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+}
+
+body #container #header nav {
+  background: lightcoral;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 30px;
+  left: -100%;
+  z-index: 100;
+  -webkit-transition: .4s all ease-in-out;
+  transition: .4s all ease-in-out;
+}
+
+body #container #header nav a {
+  display: block;
+  text-align: center;
+  height: 6%;
+}
+
+body #container #header nav.active {
+  left: 0;
+}
+
+body #container #header #menu-toggler {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 body #message-line {
@@ -33,7 +65,7 @@ body #message-line {
   font-size: 1.8rem;
 }
 
-@media (max-width: 510px) {
+@media (max-width: 750px) {
   body #headline {
     text-align: center;
     margin: 0 auto;
@@ -41,20 +73,11 @@ body #message-line {
   body #headline #headline-inner-container #heading h1 {
     font-size: 3.5rem;
     color: #000000;
-    padding: 4rem;
-  }
-  body #headline #headline-inner-container #heading_img img {
-    width: 75%;
-    margin: 0 auto;
-    position: relative;
-    z-index: 0;
-    -webkit-box-shadow: 5px 5px 30px 12px #000000;
-    box-shadow: 5px 5px 30px 12px #000000;
+    padding: 7rem 2rem;
   }
   body #headline #headline-inner-container #heading_description {
     background: #3A3838;
     color: #BFBFBF;
-    z-index: -1;
     border-radius: 35px;
     padding: 1rem;
     height: 700px;
@@ -71,72 +94,86 @@ body #message-line {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
+    text-align: left;
+    z-index: -2;
   }
-  body #headline #headline-inner-container #heading_description #authorName {
-    font-size: 4rem;
-  }
-  body #headline #headline-inner-container #heading_description #description {
-    padding: 2rem;
-  }
-  body #icons-container {
-    background: #3A3838;
-    border-bottom-left-radius: 35px;
-    border-bottom-right-radius: 35px;
-    padding-bottom: 8rem;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  body #icons-container .icons {
-    border: 1px solid white;
-    height: 10rem;
-    padding: 2rem;
-    margin: 4rem;
-    color: white;
-    text-align: center;
-  }
-  body #about-me {
-    text-align: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  body #about-me #about-me-img img {
-    height: 500px;
+  body #headline #headline-inner-container #head-content #heading_img img {
+    width: 75%;
     margin: 0 auto;
-    margin-top: -100px;
     -webkit-box-shadow: 5px 5px 30px 12px #000000;
     box-shadow: 5px 5px 30px 12px #000000;
   }
-  body #about-me #about-me-title h1 {
-    font-size: 3.5rem;
-    color: #000000;
-    padding-top: 4rem;
+  body #headline #headline-inner-container #authorName {
+    font-size: 4rem;
   }
-  body #about-me #about-me-description p {
-    padding: 2.5rem;
-    text-align: left;
+  body #headline #headline-inner-container #description {
+    padding: 2rem;
   }
+}
+
+body #icons-container {
+  background: #3A3838;
+  border-bottom-left-radius: 35px;
+  border-bottom-right-radius: 35px;
+  padding-bottom: 8rem;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+body #icons-container .icons {
+  border: 1px solid white;
+  height: 10rem;
+  padding: 2rem;
+  margin: 4rem;
+  color: white;
+  text-align: center;
+}
+
+body #about-me {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+body #about-me #about-me-img img {
+  height: 500px;
+  margin: 0 auto;
+  margin-top: -100px;
+  -webkit-box-shadow: 5px 5px 30px 12px #000000;
+  box-shadow: 5px 5px 30px 12px #000000;
+}
+
+body #about-me #about-me-title h1 {
+  font-size: 3.5rem;
+  color: #000000;
+  padding-top: 4rem;
+}
+
+body #about-me #about-me-description p {
+  padding: 2.5rem;
+  text-align: left;
 }
 /*# sourceMappingURL=style.css.map */
