--- a/src/public/css/style.scss
+++ b/src/public/css/style.scss
@@ -1,19 +1,57 @@
+$basicColor: whitesmoke;
+$backgroundColor : #3A3838;
+$fontColor: #BFBFBF;
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  border: 1px solid;
+  ;
 }
 
 body {
-  background: #F2F2F2;
+  background: $basicColor;
 
   #container {
     min-width: 338px;
+
+    #header {
+      background: lightblue;
+      height: 30px;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      
+      nav {
+        background: lightcoral;
+        height: 100vh;
+        width: 100%;
+        position: fixed;
+        top: 30px;
+        left: -100%;
+        z-index: 100;
+        transition: .4s all ease-in-out;
+
+        a {
+          display: block;
+          text-align: center;
+          height: 6%;
+        }
+      }
+
+      nav.active {
+        left: 0
+      }
+
+      #menu-toggler {
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
+    }
   }
 
-  #header {
-    display: none;
-  }
 
   #message-line {
     display: flex;
@@ -24,33 +62,22 @@ body {
     font-size: 1.8rem;
   }
 
-  @media(max-width: 510px) {
+  @media(max-width: 750px) {
 
     #headline {
       text-align: center;
-
       margin: 0 auto;
 
       #headline-inner-container {
         #heading h1 {
           font-size: 3.5rem;
           color: #000000;
-          padding: 4rem;
-        }
-
-        #heading_img img {
-          width: 75%;
-          margin: 0 auto;
-          position: relative;
-          z-index: 0;
-          -webkit-box-shadow: 5px 5px 30px 12px #000000;
-          box-shadow: 5px 5px 30px 12px #000000;
+          padding: 7rem 2rem;
         }
 
         #heading_description {
           background: #3A3838;
-          color: #BFBFBF;
-          z-index: -1;
+          color: $fontColor;
           border-radius: 35px;
           padding: 1rem;
           height: 700px;
@@ -59,67 +86,83 @@ body {
           flex-direction: column;
           align-content: center;
           justify-content: flex-end;
+          text-align: left;
+          z-index: -2;
+        }
 
-          #authorName {
-            font-size: 4rem;
-          }
+        #head-content {
 
-          #description {
-            padding: 2rem;
+          #heading_img {
+
+            img {
+              width: 75%;
+              margin: 0 auto;
+              -webkit-box-shadow: 5px 5px 30px 12px #000000;
+              box-shadow: 5px 5px 30px 12px #000000;
+            }
           }
         }
 
-      }
-    }
 
-    #icons-container {
+        #authorName {
+          font-size: 4rem;
+        }
 
-      background: #3A3838;
-      border-bottom-left-radius: 35px;
-      border-bottom-right-radius: 35px;
-      padding-bottom: 8rem;
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-
-
-      .icons {
-        border: 1px solid white;
-        height: 10rem;
-        padding: 2rem;
-        margin: 4rem;
-        color: white;
-        text-align: center;
-      }
-    }
-
-    #about-me {
-      text-align: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-
-      #about-me-img img {
-        height: 500px;
-        margin: 0 auto;
-        margin-top: -100px;
-        -webkit-box-shadow: 5px 5px 30px 12px #000000;
-        box-shadow: 5px 5px 30px 12px #000000;
+        #description {
+          padding: 2rem;
+        }
       }
 
-      #about-me-title h1 {
-        font-size: 3.5rem;
-        color: #000000;
-        padding-top: 4rem;
-      }
-      #about-me-description p {
-        padding: 2.5rem;
-        text-align: left;
-      }
     }
   }
 
+  #icons-container {
+
+    background: #3A3838;
+    border-bottom-left-radius: 35px;
+    border-bottom-right-radius: 35px;
+    padding-bottom: 8rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+
+    .icons {
+      border: 1px solid white;
+      height: 10rem;
+      padding: 2rem;
+      margin: 4rem;
+      color: white;
+      text-align: center;
+    }
+  }
+
+  #about-me {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    #about-me-img img {
+      height: 500px;
+      margin: 0 auto;
+      margin-top: -100px;
+      -webkit-box-shadow: 5px 5px 30px 12px #000000;
+      box-shadow: 5px 5px 30px 12px #000000;
+    }
+
+    #about-me-title h1 {
+      font-size: 3.5rem;
+      color: #000000;
+      padding-top: 4rem;
+    }
+
+    #about-me-description p {
+      padding: 2.5rem;
+      text-align: left;
+    }
+  }
 }
