--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
@@ -14,14 +15,14 @@
 <body>
   <div id="container">
     <div id="header">
-      <p class="logo">Logo</p>
+      <p id="logo">Logo</p>
       <nav id="nav">
         <a href="#about-me" class="nav_link">About me</a>
         <a href="" class="nav_link">Portfolio</a>
         <a href="" class="nav_link">Reviews</a>
         <a href="" class="nav_link">Contact</a>
       </nav>
-      <div id="menu-toggler">menu</div>
+      <div id="menu-toggler"><i class="fa fa-solid fa-bars fa-lg"></i></div>
     </div>
     <div id="headline">
       <div id="headline-inner-container">
@@ -67,26 +68,27 @@
     </div>
     <div id="about-me">
       <div id="about-me-img">
-        <img  src="images/_DSC3514.JPG" alt="">
+        <img src="images/_DSC3514.JPG" alt="">
       </div>
       <div id="about-me-title">
         <h1>About me</h1>
       </div>
       <div id="about-me-description">
         <p>Lorem ipsum dolor sit amet, consecte
-          turadipiscing elit. Fusce elit ante, 
-          vulputate id risus nec, placerat 
-          volutpat magna. Integer 
-          tempus condimentum neque 
-          vitae commodo. Pellentesque 
-          iaculis cursus arcu, semper suscipit 
+          turadipiscing elit. Fusce elit ante,
+          vulputate id risus nec, placerat
+          volutpat magna. Integer
+          tempus condimentum neque
+          vitae commodo. Pellentesque
+          iaculis cursus arcu, semper suscipit
           ipsum.</p>
       </div>
     </div>
 
   </div>
 
-  <script src="js/app.js"></script>
+  <div id="toTop">ToTop!</div>
+  <script src="js/navigation.js"></script>
 </body>
 
 </html>
