--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,28 +24,23 @@
       </nav>
       <div id="menu-toggler"><i class="fa fa-solid fa-bars fa-lg"></i></div>
     </div>
-    <div id="headline">
-      <div id="headline-inner-container">
-        <div id="heading">
-          <h1>Studio Base</h1>
-        </div>
-        <div id="head-content">
-          <div id="heading_img">
+    <div id="heading">
+      <div id="headline">
+        <h1>Studio Base</h1>
+        <p>Photography</p>
+        <hr>
+      </div>
+      <div id="head-content">
+        <div id="head-content-inner">
+          <div id="img-container">
             <img src="images/_DSC3514.JPG" alt="">
+
           </div>
-          <div id="heading_description">
-            <h1 id="authorName">Your name</h1>
-            <p id="description">
-              Lorem ipsum dolor sit amet, consecte
-              turadipiscing elit. Fusce elit ante,
-              vulputate id risus nec, placerat
-              volutpat magna. Integer
-              tempus condimentum neque
-              vitae commodo. Pellentesque
-              iaculis cursus arcu, semper suscipit
-              ipsum.
-            </p>
-          </div>
+          <h1>Your name</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Magni eos saepe animi quas iusto. Recusandae reprehenderit
+             veritatis totam corrupti vero, dolorum quidem saepe possimus 
+             delectus ab aliquid sunt, eos eveniet?</p>
         </div>
       </div>
     </div>
@@ -88,7 +83,7 @@
   </div>
 
   <div id="toTop">ToTop!</div>
-  <script src="js/navigation.js"></script>
-</body>
+  <script src="js/index.js"></script>
+  </body>
 
 </html>
