--- a/src/views/index.html
+++ b/src/views/index.html
@@ -33,14 +33,14 @@
       <div id="head-content">
         <div id="head-content-inner">
           <div id="img-container">
-            <img src="images/_DSC3514.JPG" alt="">
+            <img id="header-image" src="images/_DSC9368.JPG" alt="">
 
           </div>
           <h1>Your name</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Magni eos saepe animi quas iusto. Recusandae reprehenderit
-             veritatis totam corrupti vero, dolorum quidem saepe possimus 
-             delectus ab aliquid sunt, eos eveniet?</p>
+            veritatis totam corrupti vero, dolorum quidem saepe possimus
+            delectus ab aliquid sunt, eos eveniet?</p>
         </div>
       </div>
     </div>
@@ -84,6 +84,6 @@
 
   <div id="toTop">ToTop!</div>
   <script src="js/index.js"></script>
-  </body>
+</body>
 
 </html>
