--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,13 +1,13 @@
+img {
+  width: 80%;
+  margin: 0 auto;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-
-img {
-  width: 70%;
-  margin: 0 auto;
 }
 
 body {
@@ -20,7 +20,7 @@ body #container {
 
 @media (max-width: 768px) {
   body #container #header {
-    background: lightblue;
+    background: #3A3838;
     height: 50px;
     position: fixed;
     width: 100%;
@@ -29,12 +29,13 @@ body #container {
   body #container #header #logo {
     position: relative;
     top: 25%;
+    color: white;
   }
   body #container #header #heading-content {
     display: none;
   }
   body #container #header nav {
-    background: lightcoral;
+    background: #3A3838;
     height: 100vh;
     width: 100%;
     position: fixed;
@@ -48,6 +49,8 @@ body #container {
     display: block;
     text-align: center;
     height: 6%;
+    text-decoration: none;
+    color: white;
   }
   body #container #header nav.active {
     left: 0;
@@ -57,6 +60,9 @@ body #container {
     top: 0;
     right: 10px;
     top: 25%;
+  }
+  body #container #header i {
+    color: white;
   }
 }
 
@@ -68,7 +74,7 @@ body #container {
 #heading #headline {
   margin-top: 50px;
   padding: 4rem;
-  margin: 4rem 2rem;
+  margin: 5rem 2rem;
   text-align: center;
 }
 
@@ -81,7 +87,7 @@ body #container {
 }
 
 #heading #headline hr {
-  width: 50%;
+  width: 70%;
   margin: 0 auto;
 }
 
@@ -132,9 +138,12 @@ body #container {
           flex-direction: column;
 }
 
-#heading #head-content #head-content-inner #img-container img {
+#heading #head-content #head-content-inner #img-container #header-image {
   -webkit-box-shadow: 5px 5px 17px 9px #000000;
   box-shadow: 5px 5px 17px 9px #000000;
+  max-width: 500px;
+  width: 80%;
+  margin: 0 auto;
 }
 
 #heading #head-content #head-content-inner h1 {
