--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,6 +24,8 @@
       </nav>
       <div id="menu-toggler"><i class="fa fa-solid fa-bars fa-lg"></i></div>
     </div>
+
+
     <div id="heading">
       <div id="headline">
         <h1>Studio Base</h1>
@@ -44,6 +46,9 @@
         </div>
       </div>
     </div>
+
+
+
     <div id="message-line">
       <p>You can write something here..</p>
     </div>
@@ -82,7 +87,7 @@
 
   </div>
 
-  <div id="toTop">ToTop!</div>
+  <div id="toTop"><i class="fa-solid fa-lg fa-arrow-turn-up"></i></div>
   <script src="js/index.js"></script>
 </body>
 
