--- a/src/public/css/style.scss
+++ b/src/public/css/style.scss
@@ -107,6 +107,7 @@ body {
       font-size: 1.8rem;
       padding: 2rem;
     }
+
   }
 }
 
@@ -116,14 +117,11 @@ body {
   z-index: -1;
 
   #headline {
-    margin-top: 50px;
-    padding: 4rem;
     margin: 5rem 2rem;
     text-align: center;
-
-
+    padding-bottom: 2rem;
     h1 {
-      font-size: 4rem;
+      font-size: 3rem;
     }
 
     p {
