Phone and tablet heading styles is added!

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -27,22 +27,32 @@
 
 
     <div id="heading">
-      <div id="headline">
-        <h1>Studio Base</h1>
-        <p>Photography</p>
-        <hr>
-      </div>
-      <div id="head-content">
-        <div id="head-content-inner">
-          <div id="img-container">
-            <img id="header-image" src="images/_DSC9368.JPG" alt="">
-
+      <div id="heading-inner">
+        <div id="headline">
+          <h1>Studio Base</h1>
+          <p>Photography</p>
+          <hr>
+          <div id="heading-navigation">
+            <a href="#about-me" class="nav_link">About me</a>
+            <a href="" class="nav_link">Portfolio</a>
+            <a href="" class="nav_link">Reviews</a>
+            <a href="" class="nav_link">Contact</a>
           </div>
-          <h1>Your name</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Magni eos saepe animi quas iusto. Recusandae reprehenderit
-            veritatis totam corrupti vero, dolorum quidem saepe possimus
-            delectus ab aliquid sunt, eos eveniet?</p>
+        </div>
+        <div id="head-content">
+          <div id="head-content-inner">
+            <div id="img-container">
+              <img id="header-image" src="images/_DSC9368.JPG" alt="">
+
+            </div>
+            
+              <h1>Petra Püspök</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Magni eos saepe animi quas iusto. Recusandae reprehenderit
+                veritatis totam corrupti vero, dolorum quidem saepe possimus
+                delectus ab aliquid sunt, eos eveniet?</p>
+      
+          </div>
         </div>
       </div>
     </div>
