--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,160 +1,140 @@
-img {
-  width: 80%;
-  margin: 0 auto;
-}
-
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
-  margin: 0;
-}
+  margin: 0; }
+
+a {
+  text-decoration: none; }
 
 body {
-  background: whitesmoke;
-}
+  background: whitesmoke; }
 
-body #container {
-  min-width: 338px;
-}
+#container {
+  min-width: 338px; }
 
 @media (max-width: 1200px) {
-  body #container #header {
+  #header {
     background: #3A3838;
     height: 50px;
     position: fixed;
     width: 100%;
-    top: 0;
-  }
-  body #container #header #logo {
-    position: relative;
-    top: 25%;
-    color: white;
-  }
-  body #container #header #heading-content {
-    display: none;
-  }
-  body #container #header nav {
-    background: #3A3838;
-    height: 100vh;
-    width: 100%;
-    position: fixed;
-    top: 50px;
-    left: -100%;
-    z-index: 0;
-    -webkit-transition: .4s all ease-in-out;
-    transition: .4s all ease-in-out;
-  }
-  body #container #header nav a {
-    display: block;
-    text-align: center;
-    height: 6%;
-    text-decoration: none;
-    color: white;
-  }
-  body #container #header nav.active {
-    left: 0;
-  }
-  body #container #header #menu-toggler {
-    position: absolute;
-    top: 0;
-    right: 10px;
-    top: 25%;
-  }
-  body #container #header i {
-    color: white;
-  }
-}
-
-body #container #message-line {
-  text-align: center;
-  font-size: 1.8rem;
-  padding: 2rem;
-}
-
+    top: 0; }
+    #header #logo {
+      position: relative;
+      top: 25%;
+      color: white; }
+    #header #heading-content {
+      display: none; }
+    #header nav {
+      background: #3A3838;
+      height: 100vh;
+      width: 100%;
+      position: fixed;
+      top: 50px;
+      left: -100%;
+      z-index: 0;
+      transition: 0.4s all ease-in-out; }
+      #header nav a {
+        display: block;
+        text-align: center;
+        height: 6%;
+        text-decoration: none;
+        color: white; }
+    #header nav.active {
+      left: 0; }
+    #header #menu-toggler {
+      position: absolute;
+      top: 0;
+      right: 10px;
+      top: 25%; }
+    #header i {
+      color: white; } }
+@media (min-width: 1200px) {
+  #header {
+    display: none; } }
 #heading {
   position: relative;
-  z-index: -1;
-}
+  z-index: -1; }
+  #heading #headline {
+    margin: 5rem 2rem;
+    text-align: center;
+    padding-bottom: 2rem; }
+    #heading #headline #heading-navigation {
+      display: none; }
+    #heading #headline h1 {
+      font-size: 3rem; }
+    #heading #headline p {
+      color: goldenrod; }
+    #heading #headline hr {
+      width: 70%;
+      margin: 0 auto;
+      margin-bottom: 2rem; }
+  #heading #head-content #head-content-inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    background-color: #3A3838;
+    color: whitesmoke;
+    border-radius: 30px;
+    -webkit-box-shadow: 5px 5px 17px 9px #000000;
+    box-shadow: 5px 5px 17px 9px #000000; }
+    #heading #head-content #head-content-inner #img-container,
+    #heading #head-content #head-content-inner h1,
+    #heading #head-content #head-content-inner p {
+      position: relative;
+      top: -100px;
+      margin: 1rem;
+      padding: 0 1rem; }
+    #heading #head-content #head-content-inner #img-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column; }
+      #heading #head-content #head-content-inner #img-container #header-image {
+        -webkit-box-shadow: 5px 5px 17px 9px #000000;
+        box-shadow: 5px 5px 17px 9px #000000;
+        max-width: 500px;
+        width: 80%;
+        margin: 0 auto; }
+    #heading #head-content #head-content-inner h1 {
+      font-size: 3rem; }
 
-#heading #headline {
-  margin: 5rem 2rem;
-  text-align: center;
-  padding-bottom: 2rem;
-}
-
-#heading #headline h1 {
-  font-size: 3rem;
-}
-
-#heading #headline p {
-  color: goldenrod;
-}
-
-#heading #headline hr {
-  width: 70%;
-  margin: 0 auto;
-}
-
-#heading #head-content #head-content-inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
+@media (min-width: 768px) {
+  #heading {
+    margin-top: 50px; }
+    #heading #heading-inner {
+      display: grid;
+      grid-template-columns: repeat(11, 1fr); }
+      #heading #heading-inner #headline {
+        grid-column: 1 / 7;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column; }
+        #heading #heading-inner #headline #heading-navigation {
+          display: flex;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
-  background-color: #3A3838;
-  color: whitesmoke;
-  border-radius: 30px;
-  -webkit-box-shadow: 5px 5px 17px 9px #000000;
-  box-shadow: 5px 5px 17px 9px #000000;
-}
-
-#heading #head-content #head-content-inner #img-container,
-#heading #head-content #head-content-inner h1,
-#heading #head-content #head-content-inner p {
-  position: relative;
-  top: -100px;
-  margin: 1rem;
-  padding: 0 1rem;
-}
-
-#heading #head-content #head-content-inner #img-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#heading #head-content #head-content-inner #img-container #header-image {
-  -webkit-box-shadow: 5px 5px 17px 9px #000000;
-  box-shadow: 5px 5px 17px 9px #000000;
-  max-width: 500px;
-  width: 80%;
-  margin: 0 auto;
-}
-
-#heading #head-content #head-content-inner h1 {
-  font-size: 3rem;
-}
-
+          flex-direction: column; }
+          #heading #heading-inner #headline #heading-navigation .nav_link {
+            font-size: 1.8rem;
+            color: #3A3838; }
+      #heading #heading-inner #head-content {
+        grid-column: 7 / 12; }
+        #heading #heading-inner #head-content #head-content-inner {
+          border-radius: 0px;
+          display: grid; }
+        #heading #heading-inner #head-content #img-container,
+        #heading #heading-inner #head-content h1,
+        #heading #heading-inner #head-content p {
+          top: 0;
+          margin: 1rem;
+          padding: 0 1rem; } }
+@media (min-width: 1200px) {
+  #heading {
+    margin-top: 0px; } }
 #toTop {
   position: fixed;
   bottom: 20px;
@@ -163,10 +143,23 @@ body #container #message-line {
   opacity: .4;
   padding: .5rem;
   border-radius: 20%;
-  border: 1px solid;
-}
+  border: 1px solid; }
+  #toTop i {
+    color: black; }
 
-#toTop i {
-  color: black;
-}
+#message-line {
+  text-align: center;
+  font-size: 1.8rem;
+  padding: 2rem;
+  border: 1px solid;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; }
+
+img {
+  width: 80%;
+  margin: 0 auto; }
+
 /*# sourceMappingURL=style.css.map */
